<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bon_violet" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/from"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:padding="13dp"
            android:scaleType="fitCenter"
            android:src="@drawable/cancel" />
    </RelativeLayout>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:hint="@string/searchfor" >

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/tv_no_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_match"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:visibility="gone" />

</LinearLayout>