<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <!-- Framelayout to display Fragments -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|end"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="10dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_btn_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/rl_flight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:onClick="clicker">

                            <ImageView
                                android:id="@+id/iv_flight"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/ic_flight" />

                            <TextView
                                android:id="@+id/tv_flight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignRight="@+id/iv_flight"
                                android:layout_below="@+id/iv_flight"
                                android:fontFamily="sans-serif-condensed"
                                android:gravity="center"
                                android:text="@string/flight"
                                android:textAllCaps="true"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_btn_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/rl_hotel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:onClick="clicker">

                            <ImageView
                                android:id="@+id/iv_hotel"
                                android:layout_width="45dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/ic_hotel" />

                            <TextView
                                android:id="@+id/tv_hotel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignRight="@+id/iv_hotel"
                                android:layout_below="@+id/iv_hotel"
                                android:fontFamily="sans-serif-condensed"
                                android:gravity="center"
                                android:text="@string/hotel"
                                android:textAllCaps="true"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_btn_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/rl_booking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:onClick="clicker">

                            <ImageView
                                android:id="@+id/iv_booking"
                                android:layout_width="45dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:scaleType="fitEnd"
                                android:src="@drawable/ic_mybooking" />

                            <TextView
                                android:id="@+id/tv_booking"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignRight="@+id/iv_booking"
                                android:layout_below="@+id/iv_booking"
                                android:fontFamily="sans-serif-condensed"
                                android:gravity="center"
                                android:text="@string/mabo"
                                android:textAllCaps="true"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/ic_btn_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/rl_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:onClick="clicker">

                            <ImageView
                                android:id="@+id/iv_register"
                                android:layout_width="45dp"
                                android:layout_height="40dp"
                                android:layout_centerHorizontal="true"
                                android:scaleType="fitEnd"
                                android:src="@drawable/ic_register" />

                            <TextView
                                android:id="@+id/tv_register"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignRight="@+id/iv_register"
                                android:layout_below="@+id/iv_register"
                                android:fontFamily="sans-serif-condensed"
                                android:gravity="center"
                                android:text="@string/register"
                                android:textAllCaps="true"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- Listview to display slider menu -->

    <LinearLayout
        android:id="@+id/ll_slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_slidermenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/list_selector"
            android:choiceMode="singleChoice"
            android:divider="@color/list_divider"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="false"
            android:scrollbars="none" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>